package ui.mover;

import component.GameTile;
import component.mover.Conveyor;
import component.mover.Mover;
import javafx.scene.image.Image;
import logic.GameLevel;
import ui.render.RenderResolver;
import util.Direction;
import util.GridPos;

import java.util.EnumSet;
import java.util.Map;

public abstract class MoverRenderResolver extends RenderResolver {

    public static double rotationFor(Mover mover) {
        return switch (mover.getRotation()) {
            case UP -> 0;
            case RIGHT -> 90;
            case DOWN -> 180;
            case LEFT -> 270;
            default -> 0;
        };
    }

    public record SpriteData(
            Image image,
            double rotationOffset,
            boolean mirrorX
    ) {}

    public static final class SpriteSelector {
        // I know this looks bad but I promise you its not really that bad
        // DOWN = BEHIND, UP = AHEAD
        public static SpriteData regular(EnumSet<Direction> topology, Map<String, Image> images, String prefix) {
            // Conveyor + Delay
            // UP doesn't do anything
            if (topology.containsAll(EnumSet.of(Direction.DOWN,  Direction.LEFT, Direction.RIGHT)))
                return new SpriteData(images.get("-merge-c"), 0, false);
            else if (topology.containsAll(EnumSet.of(Direction.LEFT,  Direction.RIGHT)))
                return new SpriteData(images.get("-merge-a"), 0, false);
            else if (topology.containsAll(EnumSet.of(Direction.RIGHT,  Direction.DOWN)))
                return new SpriteData(images.get("-merge-b"), 0, false);
            else if (topology.containsAll(EnumSet.of(Direction.LEFT,  Direction.DOWN)))
                return new SpriteData(images.get("-merge-b"), 0, true);
            else if (topology.contains(Direction.LEFT))
                return new SpriteData(images.get("-turn"), +90, false);
            else if (topology.contains(Direction.RIGHT))
                return new SpriteData(images.get("-turn"), -90, false);
            else
                return new SpriteData(images.get("-base"), 0, false);
        }

        public static SpriteData flipFlop(EnumSet<Direction> topology, Map<String, Image> images, String prefix) {
            // FlipFlop
            // DOWN and UP doesn't do anything
            if (topology.containsAll(EnumSet.of(Direction.LEFT, Direction.RIGHT)))
                return new SpriteData(images.get("-merge-c"), +90, false);
            else if (topology.contains(Direction.RIGHT))
                return new SpriteData(images.get("-merge-a"), +90, true);
            else if (topology.contains(Direction.LEFT))
                return new SpriteData(images.get("-merge-a"), +90, false);
            else
                return new SpriteData(images.get("-base"), +90, false);
        }

        public static SpriteData filter(EnumSet<Direction> topology, Map<String, Image> images, String prefix) {
            // ParityFilter + RedBlackFilter
            // UP AND LEFT doesn't do anything
            if (topology.containsAll(EnumSet.of(Direction.DOWN, Direction.RIGHT)))
                return new SpriteData(images.get("-merge-c"), 0, false);
            else if (topology.contains(Direction.DOWN))
                return new SpriteData(images.get("-merge-a"), 0, false);
            else if (topology.contains(Direction.RIGHT))
                return new SpriteData(images.get("-merge-b"), 0, false);
            else
                return new SpriteData(images.get("-base"), 0, false);
        }

    }

    public static final class MoverTopology {

        // We will use enum set instead (EnumSet<Direction>)

        public static EnumSet<Direction> resolve(Mover conveyor, GridPos pos) {
            GameTile[] tiles = GameLevel.getInstance().getAdjacentTiles(pos);
            Direction forward = conveyor.getRotation();

            EnumSet<Direction> moverInputs = EnumSet.noneOf(Direction.class);

            System.out.println("Resolving topology for conveyor at " + pos +
                    " facing " + forward);

            for (int i = 0; i < tiles.length; i++) {
                GameTile tile = tiles[i];
                if (tile != null && tile.getMover() != null) {
                    Mover adjacentMover = tile.getMover();
                    Direction adjacentDirection = adjacentMover.getRotation();
                    // check if facing into
                    if(!tile.getGridPos().addDirection(adjacentDirection).equals(pos)) continue;

                    System.out.println("Adjacent conveyor at " + adjacentMover.getGridPos() +
                            " facing " + adjacentDirection +
                            " relative to conveyor at " + pos +
                            " facing " + forward);

                    if (forward.equals(adjacentDirection)) {
                        moverInputs.add(Direction.DOWN); // BEHIND
                    } else if (forward.isLeftOf(adjacentDirection)) {
                        moverInputs.add(Direction.LEFT);
                    } else if (forward.isRightOf(adjacentDirection)) {
                        moverInputs.add(Direction.RIGHT);
                    } else if (forward.isOpposite(adjacentDirection)) {
                        moverInputs.add(Direction.UP); // AHEAD
                    }
                }
            }

            return moverInputs;
        }
    }

}
